--- a/MVCBase.DAL/MVCBase.DAL.csproj
+++ b/MVCBase.DAL/MVCBase.DAL.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Admin.cs" />
+    <Compile Include="Medium.cs" />
     <Compile Include="News.cs" />
     <Compile Include="NHibernateHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
