--- a/MVCBase.Domain/MVCBase.Domain.csproj
+++ b/MVCBase.Domain/MVCBase.Domain.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity\Ba_Admin.cs" />
+    <Compile Include="Entity\Ba_Medium.cs" />
     <Compile Include="Entity\Ba_News.cs" />
     <Compile Include="Entity\Customer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -56,6 +57,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Mapping\Ba_News.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Mapping\Ba_Medium.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
