--- a/MVCBase/Web.config
+++ b/MVCBase/Web.config
@@ -123,6 +123,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="connectionstring" connectionString="Data Source=61.63.9.90;Initial Catalog=HDMS;uid=Dragon;pwd=Dragon~20080414;" providerName="System.Data.SqlClient" />
-    <add name="SQLiteConnectionString" connectionString="Data Source=E:\mydrive\Project\MVCBase\MVCBase\App_Data\MVCBaseDB.db" providerName="System.Data.SqlClient"/>
+    <add name="SQLiteConnectionString" connectionString="Data Source=D:\project\HAICHI\MVCBase\App_Data\MVCBaseDB.db" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
