--- a/MVCBase/MVCBase.csproj
+++ b/MVCBase/MVCBase.csproj
@@ -132,10 +132,13 @@
     <Compile Include="Common\common.cs" />
     <Compile Include="Common\Database.cs" />
     <Compile Include="Common\Encrypt.cs" />
+    <Compile Include="Common\HtmlPageInfo.cs" />
+    <Compile Include="Common\HtmlPagerControl.cs" />
     <Compile Include="Common\JScript.cs" />
     <Compile Include="Common\SqlInject.cs" />
     <Compile Include="Common\XSSInject.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DetailController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ListController.cs" />
     <Compile Include="default.aspx.cs">
@@ -459,6 +462,7 @@
     <Content Include="Content\Base\Images\bg.png" />
     <Content Include="Content\Base\Images\copyright.png" />
     <Content Include="Content\Base\Images\defaultimg.jpg" />
+    <Content Include="Content\Base\Images\detail.png" />
     <Content Include="Content\Base\Images\haichilogo.png" />
     <Content Include="Content\Base\Images\indexline_left.png" />
     <Content Include="Content\Base\Images\indexline_right.png" />
@@ -468,12 +472,16 @@
     <Content Include="Content\Base\Images\lbg.png" />
     <Content Include="Content\Base\Images\listimg_bg.png" />
     <Content Include="Content\Base\Images\logo.png" />
+    <Content Include="Content\Base\Images\page.png" />
+    <Content Include="Content\Base\Images\people_bg.png" />
+    <Content Include="Content\Base\Images\pi.png" />
     <Content Include="Content\Base\Images\product.png" />
     <Content Include="Content\Base\Images\product_bg.png" />
     <Content Include="Content\Base\Images\product_bg_1.png" />
     <Content Include="Content\Base\Images\product_bg_2.png" />
     <Content Include="Content\Base\Images\product_bg_3.png" />
     <Content Include="Content\Base\Images\product_bg_4.png" />
+    <Content Include="Content\jquery.jscrollpane.css" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -565,6 +573,8 @@
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.js" />
     <Content Include="Scripts\jquery-ui-1.8.20.min.js" />
+    <Content Include="Scripts\jquery.jscrollpane.min.js" />
+    <Content Include="Scripts\jquery.mousewheel.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
@@ -608,6 +618,8 @@
     <Content Include="Views\List\News.cshtml" />
     <Content Include="Views\List\Medium.cshtml" />
     <Content Include="Views\Home\People.cshtml" />
+    <Content Include="Views\Detail\News.cshtml" />
+    <Content Include="Views\Detail\Medium.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\SuperAdmin\Models\" />
