更新web.release.config 使发布版(即线上)DB连接配置与debug版不同

--- a/MVCBase/Web.Release.config
+++ b/MVCBase/Web.Release.config
@@ -14,6 +14,9 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="SQLiteConnectionString" connectionString="Data Source=D:\wwwroot\haichitw\App_Data\MVCBaseDB.db" providerName="System.Data.SqlClient" xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
