--- a/MVCBase/Web.config
+++ b/MVCBase/Web.config
@@ -49,6 +49,7 @@
     </logger>
   </log4net>
   <appSettings>
+    <add key="connection.driver_class" value="Name.Space.MonoSqliteDriver, AssemblyName" />
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
@@ -57,7 +58,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
@@ -95,8 +96,8 @@
   </system.web>
   <system.webServer>
     <handlers>
-<!--      <add name="ModuleRewriter" path="*.html" verb="*" modules="IsapiModule" scriptProcessor="C:\Windows\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" resourceType="Unspecified" requireAccess="Script" preCondition="classicMode,runtimeVersionv4.0,bitness64" />-->
-<!--      <add name="StaticRequestHandler" path="*.cgi" verb="*" modules="IsapiModule" scriptProcessor="C:\Windows\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" resourceType="Unspecified" requireAccess="Script" preCondition="classicMode,runtimeVersionv4.0,bitness64" />-->
+      <!--      <add name="ModuleRewriter" path="*.html" verb="*" modules="IsapiModule" scriptProcessor="C:\Windows\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" resourceType="Unspecified" requireAccess="Script" preCondition="classicMode,runtimeVersionv4.0,bitness64" />-->
+      <!--      <add name="StaticRequestHandler" path="*.cgi" verb="*" modules="IsapiModule" scriptProcessor="C:\Windows\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" resourceType="Unspecified" requireAccess="Script" preCondition="classicMode,runtimeVersionv4.0,bitness64" />-->
     </handlers>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
